crates/anvil-tui/src/surfaces/tutorial/snapshots/anvil_tui__surfaces__tutorial__render__tests__snapshot_complete_phase_delta_test_paths.snap
---
source: crates/anvil-tui/src/surfaces/tutorial/render.rs
expression: "crate::test_utils::snapshot::buffer_to_string(&buf)"
---
[[fg:#D95A00,bold]‡[fg:#D95A00,bold]][fg:#D95A00,bold] a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold] [fg:#85858A]>[fg:#85858A] [fg:#85858A]T[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]                                                            
                                                                                
  ┌[fg:#2E8B57] [fg:#2E8B57]W[fg:#2E8B57]e[fg:#2E8B57]l[fg:#2E8B57]l[fg:#2E8B57] [fg:#2E8B57]D[fg:#2E8B57]o[fg:#2E8B57]n[fg:#2E8B57]e[fg:#2E8B57] [fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]┐[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]  ✓[fg:#2E8B57,bold] [fg:#2E8B57,bold] [fg:#2E8B57,bold]G[fg:#2E8B57,bold]r[fg:#2E8B57,bold]e[fg:#2E8B57,bold]a[fg:#2E8B57,bold]t[fg:#2E8B57,bold] [fg:#2E8B57,bold]w[fg:#2E8B57,bold]o[fg:#2E8B57,bold]r[fg:#2E8B57,bold]k[fg:#2E8B57,bold]![fg:#2E8B57,bold]                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]  Y[fg:#EBEBEB]o[fg:#EBEBEB]u[fg:#EBEBEB] [fg:#EBEBEB]f[fg:#EBEBEB]i[fg:#EBEBEB]n[fg:#EBEBEB]i[fg:#EBEBEB]s[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]d[fg:#EBEBEB] [fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB]l[fg:#EBEBEB] [fg:#EBEBEB]6[fg:#EBEBEB] [fg:#EBEBEB]s[fg:#EBEBEB]t[fg:#EBEBEB]e[fg:#EBEBEB]p[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]o[fg:#EBEBEB]f[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB] [fg:#EBEBEB]P[fg:#EBEBEB]o[fg:#EBEBEB]l[fg:#EBEBEB]i[fg:#EBEBEB]c[fg:#EBEBEB]y[fg:#EBEBEB] [fg:#EBEBEB]c[fg:#EBEBEB]h[fg:#EBEBEB]e[fg:#EBEBEB]c[fg:#EBEBEB]k[fg:#EBEBEB]s[fg:#EBEBEB] [fg:#EBEBEB]t[fg:#EBEBEB]u[fg:#EBEBEB]t[fg:#EBEBEB]o[fg:#EBEBEB]r[fg:#EBEBEB]i[fg:#EBEBEB]a[fg:#EBEBEB]l[fg:#EBEBEB].[fg:#EBEBEB]                 │[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]  R[fg:#85858A]e[fg:#85858A]-[fg:#85858A]s[fg:#85858A]c[fg:#85858A]a[fg:#85858A]n[fg:#85858A]n[fg:#85858A]e[fg:#85858A]d[fg:#85858A] [fg:#85858A]y[fg:#85858A]o[fg:#85858A]u[fg:#85858A]r[fg:#85858A] [fg:#85858A]r[fg:#85858A]e[fg:#85858A]p[fg:#85858A]o[fg:#85858A]:[fg:#85858A] [fg:#85858A]1[fg:#85858A]1[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A] [fg:#85858A]—[fg:#85858A] [fg:#85858A]s[fg:#85858A]a[fg:#85858A]m[fg:#85858A]e[fg:#85858A] [fg:#85858A]a[fg:#85858A]s[fg:#85858A] [fg:#85858A]w[fg:#85858A]h[fg:#85858A]e[fg:#85858A]n[fg:#85858A] [fg:#85858A]y[fg:#85858A]o[fg:#85858A]u[fg:#85858A] [fg:#85858A]s[fg:#85858A]t[fg:#85858A]a[fg:#85858A]r[fg:#85858A]t[fg:#85858A]e[fg:#85858A]d[fg:#85858A].[fg:#85858A]           │[fg:#2E8B57]  
  │[fg:#2E8B57]  R[fg:#85858A]e[fg:#85858A]p[fg:#85858A]o[fg:#85858A]-[fg:#85858A]w[fg:#85858A]i[fg:#85858A]d[fg:#85858A]e[fg:#85858A] [fg:#85858A]c[fg:#85858A]o[fg:#85858A]u[fg:#85858A]n[fg:#85858A]t[fg:#85858A] [fg:#85858A]o[fg:#85858A]f[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]t[fg:#85858A]i[fg:#85858A]-[fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A]n[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]d[fg:#85858A] [fg:#85858A]s[fg:#85858A]e[fg:#85858A]c[fg:#85858A]r[fg:#85858A]e[fg:#85858A]t[fg:#85858A] [fg:#85858A]r[fg:#85858A]u[fg:#85858A]l[fg:#85858A]e[fg:#85858A]s[fg:#85858A] [fg:#85858A]—[fg:#85858A] [fg:#85858A]n[fg:#85858A]o[fg:#85858A]t[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]n[fg:#85858A]d[fg:#85858A]i[fg:#85858A]n[fg:#85858A]g[fg:#85858A]s[fg:#85858A] [fg:#85858A]f[fg:#85858A]r[fg:#85858A]o[fg:#85858A]m[fg:#85858A]    │[fg:#2E8B57]  
  │[fg:#2E8B57]  t[fg:#85858A]h[fg:#85858A]i[fg:#85858A]s[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]h[fg:#85858A].[fg:#85858A]                                                              │[fg:#2E8B57]  
  │[fg:#2E8B57]  1[fg:#85858A]1[fg:#85858A] [fg:#85858A]o[fg:#85858A]f[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]e[fg:#85858A]m[fg:#85858A] [fg:#85858A]a[fg:#85858A]r[fg:#85858A]e[fg:#85858A] [fg:#85858A]i[fg:#85858A]n[fg:#85858A] [fg:#85858A]t[fg:#85858A]e[fg:#85858A]s[fg:#85858A]t[fg:#85858A] [fg:#85858A]o[fg:#85858A]r[fg:#85858A] [fg:#85858A]f[fg:#85858A]i[fg:#85858A]x[fg:#85858A]t[fg:#85858A]u[fg:#85858A]r[fg:#85858A]e[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]h[fg:#85858A]s[fg:#85858A] [fg:#85858A]—[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]v[fg:#85858A]i[fg:#85858A]l[fg:#85858A] [fg:#85858A]s[fg:#85858A]c[fg:#85858A]a[fg:#85858A]n[fg:#85858A]s[fg:#85858A] [fg:#85858A]t[fg:#85858A]h[fg:#85858A]o[fg:#85858A]s[fg:#85858A]e[fg:#85858A] [fg:#85858A]t[fg:#85858A]o[fg:#85858A]o[fg:#85858A].[fg:#85858A]        │[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]  P[fg:#85858A]r[fg:#85858A]o[fg:#85858A]g[fg:#85858A]r[fg:#85858A]e[fg:#85858A]s[fg:#85858A]s[fg:#85858A]:[fg:#85858A] [fg:#85858A]1[fg:#85858A] [fg:#85858A]o[fg:#85858A]f[fg:#85858A] [fg:#85858A]6[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]h[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]                                                │[fg:#2E8B57]  
  │[fg:#2E8B57]  ○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]●[fg:#2E8B57] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A] [fg:#85858A] [fg:#85858A]○[fg:#85858A]                                                        │[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  │[fg:#2E8B57]  U[fg:#85858A]p[fg:#85858A] [fg:#85858A]n[fg:#85858A]e[fg:#85858A]x[fg:#85858A]t[fg:#85858A]:[fg:#85858A] [fg:#85858A]a[fg:#D95A00,bold]n[fg:#D95A00,bold]v[fg:#D95A00,bold]i[fg:#D95A00,bold]l[fg:#D95A00,bold]'[fg:#D95A00,bold]s[fg:#D95A00,bold] [fg:#D95A00,bold]p[fg:#D95A00,bold]r[fg:#D95A00,bold]o[fg:#D95A00,bold]t[fg:#D95A00,bold]e[fg:#D95A00,bold]c[fg:#D95A00,bold]t[fg:#D95A00,bold]i[fg:#D95A00,bold]o[fg:#D95A00,bold]n[fg:#D95A00,bold] [fg:#D95A00,bold]l[fg:#D95A00,bold]o[fg:#D95A00,bold]o[fg:#D95A00,bold]p[fg:#D95A00,bold]                                        │[fg:#2E8B57]  
  │[fg:#2E8B57]                                                                          │[fg:#2E8B57]  
  └[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]─[fg:#2E8B57]┘[fg:#2E8B57]  
e[fg:#85858A]n[fg:#85858A]t[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A]c[fg:#85858A]h[fg:#85858A]o[fg:#85858A]o[fg:#85858A]s[fg:#85858A]e[fg:#85858A] [fg:#85858A]a[fg:#85858A]n[fg:#85858A]o[fg:#85858A]t[fg:#85858A]h[fg:#85858A]e[fg:#85858A]r[fg:#85858A] [fg:#85858A] [fg:#85858A]e[fg:#85858A]s[fg:#85858A]c[fg:#85858A] [fg:#85858A]p[fg:#85858A]a[fg:#85858A]t[fg:#85858A]h[fg:#85858A]s[fg:#85858A] [fg:#85858A] [fg:#85858A]q[fg:#85858A] [fg:#85858A]q[fg:#85858A]u[fg:#85858A]i[fg:#85858A]t[fg:#85858A]                    [[fg:#85858A]‡[fg:#85858A]][fg:#85858A] [fg:#85858A]a[fg:#85858A] [fg:#85858A]n[fg:#85858A] [fg:#85858A]v[fg:#85858A] [fg:#85858A]i[fg:#85858A] [fg:#85858A]l[fg:#85858A] [fg:#85858A] [fg:#85858A]v[fg:#85858A]X[fg:#85858A].[fg:#85858A]Y[fg:#85858A].[fg:#85858A]Z[fg:#85858A]
